# smart-vms-qr-system

./: README.md  pyproject.toml
auditlogs/: admin.py  models.py  serializers.py  urls.py  views.py
auditlogs/migrations/: 0001_initial.py  0002_alter_auditlog_action.py
core/: permissions.py  settings.py  urls.py  utils.py
dashboard/: views.py
notifications/: admin.py  models.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py
organisations/: admin.py  models.py  serializers.py  urls.py  views.py
organisations/migrations/: 0001_initial.py
user/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_department.py  0003_user_otp_user_otp_created_at.py
visitors/: admin.py  models.py  serializers.py  urls.py  views.py
visitors/migrations/: 0001_initial.py  0002_visitor_blacklisted_at_visitor_blacklisted_by_and_more.py
visits/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
visits/migrations/: 0001_initial.py  0002_visit_notes.py
